--- a/.github/workflows/run-login-script.yml
+++ b/.github/workflows/run-login-script.yml
@@ -25,16 +25,12 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: "3.x"
+        python-version: '3.9'
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-
-      - name: Install distutils
-        run: |
-          sudo apt-get install python3-distutils
 
       - name: Run login.py every minute
         run: |
