--- a/.github/workflows/run-login-script.yml
+++ b/.github/workflows/run-login-script.yml
@@ -1,23 +1,21 @@
-name: On-Demand Repeating Python Script
+name: Run Python Script
 
 on:
-  workflow_dispatch:
+  workflow_dispatch:  # Manually triggered workflow
     inputs:
-      minutes:
-        description: "How many minutes should the script run?"
+      run_script:
+        description: 'Run the script'
         required: true
-        default: "120"  # default is 2 hours
+        default: 'yes'
 
 jobs:
-  run-script:
+  run:
     runs-on: ubuntu-latest
-
     env:
       TWILIO_ACCOUNT_SID: ${{ secrets.TWILIO_ACCOUNT_SID }}
       TWILIO_AUTH_TOKEN: ${{ secrets.TWILIO_AUTH_TOKEN }}
       TWILIO_FROM_PHONE: ${{ secrets.TWILIO_FROM_PHONE }}
       TWILIO_TO_PHONE: ${{ secrets.TWILIO_TO_PHONE }}
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
@@ -25,18 +23,17 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: '3.9'  # Fixed indentation here
+          python-version: '3.9'
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Run login.py every minute
-        shell: bash
+      - name: Run Python script
         run: |
-          echo "Running for ${{ github.event.inputs.minutes }} minutes..."
-          for ((i=1; i<=${{ github.event.inputs.minutes }}; i++)); do
+          echo "Running login.py for 3 minutes..."
+          for i in {1..3}; do
             echo "⏱️ Minute $i: Running login.py"
             python login.py
             sleep 60
